# lemmy-benchmarking

./: .gitignore  Cargo.toml  README.md  bench.sh  docker-compose.yml  render-bench-result.tsx
data/Import-Reddit-Dump-v1/: dump.jsonl.zst
src/: lib.rs
