[package]
name = "lemmy-benchmarking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
async-stream = "0.3.5"
async-trait = "0.1.68"
clap = { version = "4.3.8", features = ["derive"] }
diesel = "2.1.0"
diesel-async = { version = "0.3.1", features = ["postgres"] }
futures = "0.3.28"
futures-core = "0.3.28"
indexmap = "2.0.0"
lemmy_db_schema = { version = "0.18.1-rc.4", path = "../lemmy/crates/db_schema" }
lemmy_utils = { version = "0.18.1-rc.4", path = "../lemmy/crates/utils" }
mime = "0.3.17"
pin-project = "1.1.2"
rand = "0.8.5"
serde = "1.0.166"
serde_json = "1.0.99"
time = { version = "0.3.22", features = ["serde"] }
tokio = "1.29.1"
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.0"
zstd = "0.12.3"
