[package]
name = "lemmy-benchmarking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitypub_federation = { version = "0", path = "../activitypub-federation-rust" }
actix-web = "4"
anyhow = "1"
async-stream = "0"
async-trait = "0"
clap = { version = "4", features = ["derive"] }
diesel = { version = "2", features = ["postgres", "serde_json"] }
diesel-async = { version = "0", features = ["postgres"] }
futures = "0"
futures-core = "0"
indexmap = "2"
lemmy_utils = { version = "0.18.1-rc.4", path = "../lemmy/crates/utils" }
mime = "0"
pin-project = "1"
rand = "0"
serde = "1"
serde_json = "1"
time = { version = "0", features = ["serde"] }
tokio = {version = "1", features = ["full"] }
tokio-stream = "0"
tracing = "0"
tracing-subscriber = "0"
url = "2"
zstd = "0"
